--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       as="style"
       onload="this.rel='stylesheet'"
-      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Manrope%3Awght%40400%3B500%3B700%3B800&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
+      href="https://fonts.googleapis.com/css2?display=swap&family=Manrope%3Awght%40400%3B500%3B700%3B800&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
     />
 
     <title>Stitch Design</title>
@@ -26,20 +26,20 @@
                 ></path>
               </svg>
             </div>
-            <h2 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em]">POS - Store X</h2>
+            <h2 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em]">PDV - Loja X</h2>
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <div class="flex items-center gap-9">
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Dashboard</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Sales</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Products</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Customers</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Reports</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Painel</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Vendas</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Produtos</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Clientes</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Relatórios</a>
             </div>
             <button
               class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#f1f4f1] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
             >
-              <span class="truncate">Operator: Alex</span>
+              <span class="truncate">Operador: Alex</span>
             </button>
             <div
               class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10"
@@ -65,7 +65,7 @@
                     </svg>
                   </div>
                   <input
-                    placeholder="Search Product (code or name)"
+                    placeholder="Pesquisar Produto (código ou nome)"
                     class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#131712] focus:outline-0 focus:ring-0 border-none bg-[#f1f4f1] focus:border-none h-full placeholder:text-[#6d8566] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
                     value=""
                   />
@@ -77,10 +77,10 @@
                 <table class="flex-1">
                   <thead>
                     <tr class="bg-white">
-                      <th class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-120 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Product</th>
-                      <th class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-240 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Qty</th>
+                      <th class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-120 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Produto</th>
+                      <th class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-240 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Qtd</th>
                       <th class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-360 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">
-                        Unit Price
+                        Preço Unit.
                       </th>
                       <th class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-480 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Total</th>
                     </tr>
@@ -88,27 +88,27 @@
                   <tbody>
                     <tr class="border-t border-t-[#dee4dc]">
                       <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-120 h-[72px] px-4 py-2 w-[400px] text-[#131712] text-sm font-normal leading-normal">
-                        Organic Apples
+                        Maçãs Orgânicas
                       </td>
                       <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">2</td>
-                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">$1.50</td>
-                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-480 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">$3.00</td>
+                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">R$1,50</td>
+                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-480 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">R$3,00</td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
                       <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-120 h-[72px] px-4 py-2 w-[400px] text-[#131712] text-sm font-normal leading-normal">
-                        Whole Wheat Bread
+                        Pão Integral
                       </td>
                       <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">1</td>
-                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">$2.75</td>
-                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-480 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">$2.75</td>
+                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">R$2,75</td>
+                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-480 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">R$2,75</td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
                       <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-120 h-[72px] px-4 py-2 w-[400px] text-[#131712] text-sm font-normal leading-normal">
-                        Almond Milk
+                        Leite de Amêndoas
                       </td>
                       <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">3</td>
-                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">$3.20</td>
-                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-480 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">$9.60</td>
+                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">R$3,20</td>
+                      <td class="table-02072e68-3fd6-4572-bbee-17d8978747fb-column-480 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">R$9,60</td>
                     </tr>
                   </tbody>
                 </table>
@@ -123,36 +123,36 @@
             <div class="p-4">
               <div class="flex justify-between gap-x-6 py-2">
                 <p class="text-[#6d8566] text-sm font-normal leading-normal">Subtotal:</p>
-                <p class="text-[#131712] text-sm font-normal leading-normal text-right">$15.35</p>
+                <p class="text-[#131712] text-sm font-normal leading-normal text-right">R$15,35</p>
               </div>
               <div class="flex justify-between gap-x-6 py-2">
-                <p class="text-[#6d8566] text-sm font-normal leading-normal">Discount:</p>
-                <p class="text-[#131712] text-sm font-normal leading-normal text-right">$0.00</p>
+                <p class="text-[#6d8566] text-sm font-normal leading-normal">Desconto:</p>
+                <p class="text-[#131712] text-sm font-normal leading-normal text-right">R$0,00</p>
               </div>
               <div class="flex justify-between gap-x-6 py-2">
-                <p class="text-[#6d8566] text-sm font-normal leading-normal">Grand Total:</p>
-                <p class="text-[#131712] text-sm font-normal leading-normal text-right">$15.35</p>
+                <p class="text-[#6d8566] text-sm font-normal leading-normal">Total Geral:</p>
+                <p class="text-[#131712] text-sm font-normal leading-normal text-right">R$15,35</p>
               </div>
             </div>
-            <h2 class="text-[#131712] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Payment</h2>
+            <h2 class="text-[#131712] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Pagamento</h2>
             <div class="flex justify-stretch">
               <div class="flex flex-1 gap-3 flex-wrap px-4 py-3 justify-between">
                 <button
                   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#f1f4f1] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
                 >
-                  <span class="truncate">Cash</span>
+                  <span class="truncate">Dinheiro</span>
                 </button>
                 <button
                   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#f1f4f1] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
                 >
-                  <span class="truncate">Card (Credit/Debit)</span>
+                  <span class="truncate">Cartão (Crédito/Débito)</span>
                 </button>
               </div>
             </div>
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
                 <input
-                  placeholder="Amount Received"
+                  placeholder="Valor Recebido"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#131712] focus:outline-0 focus:ring-0 border border-[#dee4dc] bg-white focus:border-[#dee4dc] h-14 placeholder:text-[#6d8566] p-[15px] text-base font-normal leading-normal"
                   value=""
                 />
@@ -161,17 +161,17 @@
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
                 <input
-                  placeholder="Change"
+                  placeholder="Troco"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#131712] focus:outline-0 focus:ring-0 border border-[#dee4dc] bg-white focus:border-[#dee4dc] h-14 placeholder:text-[#6d8566] p-[15px] text-base font-normal leading-normal"
                   value=""
                 />
               </label>
             </div>
-            <h2 class="text-[#131712] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Customer</h2>
+            <h2 class="text-[#131712] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Cliente</h2>
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
                 <input
-                  placeholder="Search Customer (name or CPF/CNPJ)"
+                  placeholder="Pesquisar Cliente (nome ou CPF/CNPJ)"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#131712] focus:outline-0 focus:ring-0 border border-[#dee4dc] bg-white focus:border-[#dee4dc] h-14 placeholder:text-[#6d8566] p-[15px] text-base font-normal leading-normal"
                   value=""
                 />
@@ -182,12 +182,12 @@
                 <button
                   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#f1f4f1] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
                 >
-                  <span class="truncate">New Customer</span>
+                  <span class="truncate">Novo Cliente</span>
                 </button>
                 <button
                   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#53d22c] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
                 >
-                  <span class="truncate">Associate Customer</span>
+                  <span class="truncate">Associar Cliente</span>
                 </button>
               </div>
             </div>
@@ -196,12 +196,12 @@
                 <button
                   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#f1f4f1] text-[#131712] text-base font-bold leading-normal tracking-[0.015em]"
                 >
-                  <span class="truncate">Cancel Sale</span>
+                  <span class="truncate">Cancelar Venda</span>
                 </button>
                 <button
                   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#53d22c] text-[#131712] text-base font-bold leading-normal tracking-[0.015em]"
                 >
-                  <span class="truncate">Finalize Sale</span>
+                  <span class="truncate">Finalizar Venda</span>
                 </button>
               </div>
             </div>
