Descreva suas atualizações aqui de forma clara e concisa

--- a/customer-detaisl.html
+++ b/customer-detaisl.html
@@ -35,10 +35,10 @@
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <div class="flex items-center gap-9">
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Painel</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Vendas</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Clientes</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Estoque</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="sales.html">Painel</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="sales.html">Vendas</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="customer-manegement.html">Clientes</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="product-inventory.html">Estoque</a>
               <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Relatórios</a>
             </div>
             <button
