--- a/customer-manegement.html
+++ b/customer-manegement.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       as="style"
       onload="this.rel='stylesheet'"
-      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Manrope%3Awght%40400%3B500%3B700%3B800&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
+      href="https://fonts.googleapis.com/css2?display=swap&family=Manrope%3Awght%40400%3B500%3B700%3B800&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
     />
 
     <title>Stitch Design</title>
@@ -38,10 +38,10 @@
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <div class="flex items-center gap-9">
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Painel</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Vendas</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Produtos</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Clientes</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="sales.html">Painel</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="sales.html">Vendas</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="product-inventory.html">Produtos</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="customer-manegement.html">Clientes</a>
             </div>
             <button
               class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 bg-[#f1f4f1] text-[#131712] gap-2 text-sm font-bold leading-normal tracking-[0.015em] min-w-0 px-2.5"
@@ -110,7 +110,7 @@
                         sophia.clark@email.com
                       </td>
                       <td class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-480 h-[72px] px-4 py-2 w-60 text-[#6d8566] text-sm font-bold leading-normal tracking-[0.015em]">
-                        Ver Detalhes
+                        <a href="customer-detaisl.html">Ver Detalhes</a>
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
@@ -124,7 +124,7 @@
                         liam.carter@email.com
                       </td>
                       <td class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-480 h-[72px] px-4 py-2 w-60 text-[#6d8566] text-sm font-bold leading-normal tracking-[0.015em]">
-                        Ver Detalhes
+                        <a href="customer-detaisl.html">Ver Detalhes</a>
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
@@ -138,7 +138,7 @@
                         olivia.bennett@email.com
                       </td>
                       <td class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-480 h-[72px] px-4 py-2 w-60 text-[#6d8566] text-sm font-bold leading-normal tracking-[0.015em]">
-                        Ver Detalhes
+                        <a href="customer-detaisl.html">Ver Detalhes</a>
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
@@ -152,7 +152,7 @@
                         noah.foster@email.com
                       </td>
                       <td class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-480 h-[72px] px-4 py-2 w-60 text-[#6d8566] text-sm font-bold leading-normal tracking-[0.015em]">
-                        Ver Detalhes
+                        <a href="customer-detaisl.html">Ver Detalhes</a>
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
@@ -166,7 +166,7 @@
                         ava.harper@email.com
                       </td>
                       <td class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-480 h-[72px] px-4 py-2 w-60 text-[#6d8566] text-sm font-bold leading-normal tracking-[0.015em]">
-                        Ver Detalhes
+                        <a href="customer-detaisl.html">Ver Detalhes</a>
                       </td>
                     </tr>
                   </tbody>
@@ -180,8 +180,8 @@
               </style>
             </div>
             <div class="flex justify-end overflow-hidden px-5 pb-5">
-              <button
-                class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-14 px-5 bg-[#53d22c] text-[#131712] text-base font-bold leading-normal tracking-[0.015em] min-w-0 gap-4 pl-4 pr-6"
+              <a href="new-costumer.html"
+                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-14 px-5 bg-[#53d22c] text-[#131712] text-base font-bold leading-normal tracking-[0.015em] min-w-0 gap-4 pl-4 pr-6"
               >
                 <div class="text-[#131712]" data-icon="Plus" data-size="24px" data-weight="regular">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
@@ -189,7 +189,7 @@
                   </svg>
                 </div>
                 <span class="truncate">Novo Cliente</span>
-              </button>
+              </a>
             </div>
           </div>
         </div>
