--- a/new-costumer.html
+++ b/new-costumer.html
@@ -38,10 +38,10 @@
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <div class="flex items-center gap-9">
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Painel</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Vendas</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Clientes</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Estoque</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="sales.html">Painel</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="sales.html">Vendas</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="customer-manegement.html">Clientes</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="product-inventory.html">Estoque</a>
               <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Relatórios</a>
             </div>
             <button
@@ -96,16 +96,16 @@
             </div>
             <div class="flex justify-stretch">
               <div class="flex flex-1 gap-3 flex-wrap px-4 py-3 justify-end">
-                <button
+                <a href="customer-manegement.html"
                   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#f1f4f1] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
                 >
                   <span class="truncate">Cancelar</span>
-                </button>
-                <button
+                </a>
+                <a href="customer-manegement.html"
                   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#53d22c] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
                 >
                   <span class="truncate">Salvar Cliente</span>
-                </button>
+                </a>
               </div>
             </div>
           </div>
