--- a/sales.html
+++ b/sales.html
@@ -30,10 +30,10 @@
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <div class="flex items-center gap-9">
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Painel</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Vendas</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Produtos</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Clientes</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="sales.html">Painel</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="sales.html">Vendas</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="product-inventory.html">Produtos</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="customer-manegement.html">Clientes</a>
               <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Relatórios</a>
             </div>
             <button
@@ -179,11 +179,9 @@
             </div>
             <div class="flex justify-stretch">
               <div class="flex flex-1 gap-3 flex-wrap px-4 py-3 justify-between">
-                <button
-                  class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#f1f4f1] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
-                >
+                <a href="new-costumer.html" class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#f1f4f1] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]">
                   <span class="truncate">Novo Cliente</span>
-                </button>
+                </a>
                 <button
                   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#53d22c] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
                 >
@@ -193,16 +191,12 @@
             </div>
             <div class="flex justify-stretch">
               <div class="flex flex-1 gap-3 flex-wrap px-4 py-3 justify-between">
-                <button
-                  class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#f1f4f1] text-[#131712] text-base font-bold leading-normal tracking-[0.015em]"
-                >
+                <a href="sales.html" class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#f1f4f1] text-[#131712] text-base font-bold leading-normal tracking-[0.015em]">
                   <span class="truncate">Cancelar Venda</span>
-                </button>
-                <button
-                  class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#53d22c] text-[#131712] text-base font-bold leading-normal tracking-[0.015em]"
-                >
+                </a>
+                <a href="sales.html" class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 bg-[#53d22c] text-[#131712] text-base font-bold leading-normal tracking-[0.015em]">
                   <span class="truncate">Finalizar Venda</span>
-                </button>
+                </a>
               </div>
             </div>
           </div>
