--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       as="style"
       onload="this.rel='stylesheet'"
-      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Manrope%3Awght%40400%3B500%3B700%3B800&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
+      href="https://fonts.googleapis.com/css2?display=swap&family=Manrope%3Awght%40400%3B500%3B700%3B800&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
     />
 
     <title>Stitch Design</title>
@@ -91,11 +91,11 @@
               </label>
             </div>
             <div class="flex px-4 py-3">
-              <button
+              <a href="login.html"
                 class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 flex-1 bg-[#8cd279] text-[#131612] text-sm font-bold leading-normal tracking-[0.015em]"
               >
                 <span class="truncate">Registrar</span>
-              </button>
+              </a>
             </div>
           </div>
         </div>
