--- a/product-inventory.html
+++ b/product-inventory.html
@@ -37,6 +37,13 @@
             <h2 class="text-[#131612] text-lg font-bold leading-tight tracking-[-0.015em]">Sistema PDV</h2>
           </div>
           <div class="flex flex-1 justify-end gap-8">
+            <div class="flex items-center gap-9">
+              <a class="text-[#131612] text-sm font-medium leading-normal" href="sales.html">Painel</a>
+              <a class="text-[#131612] text-sm font-medium leading-normal" href="sales.html">Vendas</a>
+              <a class="text-[#131612] text-sm font-medium leading-normal" href="product-inventory.html">Produtos</a>
+              <a class="text-[#131612] text-sm font-medium leading-normal" href="customer-manegement.html">Clientes</a>
+              <a class="text-[#131612] text-sm font-medium leading-normal" href="#">Relatórios</a>
+            </div>
             <label class="flex flex-col min-w-40 !h-10 max-w-64">
               <div class="flex w-full flex-1 items-stretch rounded-xl h-full">
                 <div
@@ -46,10 +53,10 @@
                   data-weight="regular"
                 >
                   <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
-                    <path
-                      d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"
-                    ></path>
-                  </svg>
+                      <path
+                        d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"
+                      ></path>
+                    </svg>
                 </div>
                 <input
                   placeholder="Pesquisar"
@@ -59,9 +66,9 @@
               </div>
             </label>
             <button
-              class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 bg-[#f2f4f1] text-[#131712] gap-2 text-sm font-bold leading-normal tracking-[0.015em] min-w-0 px-2.5"
+              class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 bg-[#f2f4f1] text-[#131612] gap-2 text-sm font-bold leading-normal tracking-[0.015em] min-w-0 px-2.5"
             >
-              <div class="text-[#131712]" data-icon="Bell" data-size="20px" data-weight="regular">
+              <div class="text-[#131612]" data-icon="Bell" data-size="20px" data-weight="regular">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256">
                   <path
                     d="M221.8,175.94C216.25,166.38,208,139.33,208,104a80,80,0,1,0-160,0c0,35.34-8.26,62.38-13.81,71.94A16,16,0,0,0,48,200H88.81a40,40,0,0,0,78.38,0H208a16,16,0,0,0,13.8-24.06ZM128,216a24,24,0,0,1-22.62-16h45.24A24,24,0,0,1,128,216ZM48,184c7.7-13.24,16-43.92,16-80a64,64,0,1,1,128,0c0,36.05,8.28,66.73,16,80Z"
